--- a/css/styles.css
+++ b/css/styles.css
@@ -579,30 +579,21 @@
   body {
     background-image: url("../images/bg-header.png");
     background-size: 100%;
-    background-position: 0% -0.8%;
+    background-position: 0% -1.5%;
     background-repeat: no-repeat;
-  }
-
-  h1 {
-    font-size: 2.5rem;
-    font-weight: bolder;
-    margin-bottom: 5px;
   }
 
   header {
     width: 100%;
     height: 72px;
     box-sizing: border-box;
-    padding: 0 5% 0 5%;
-    /* margin-left: 24px;
-    margin-bottom: 90px; */
+    padding: 0% 5% 0% 5%;
   }
 
-  section {
-    width: 100%;
-    box-sizing: border-box;
-    margin-right: 20px;
-    margin-bottom: 120px;
+  h1 {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    margin-bottom: 5px;
   }
 
   ul {
@@ -619,16 +610,23 @@
     vertical-align: middle;
   }
 
-  nav {
-    margin: 0;
-    padding: 0;
-  }
-
   hr {
+    /* display: none; */
     width: 100%;
-    margin: 10px auto 8px auto;
+    margin: 10px auto 8px 0;
     padding: 0;
     border-bottom: solid 1px #dfe1e6;
+  }
+
+  #delay {
+    font-size: 48px;
+    transition-property: font-size;
+    transition-duration: 2s;
+    transition-delay: 1s;
+  }
+
+  #delay:hover {
+    font-size: 56px;
   }
 
   .poppins {
@@ -638,13 +636,6 @@
   /* Toolbar */
   .container-2 {
     display: none;
-    /* font-family: Poppins, sans-serif;
-    margin-top: 24px;
-    margin-left: 0;
-    margin-right: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; */
   }
 
   .toolbar {
@@ -681,12 +672,10 @@
     padding-top: 5px;
   }
 
-  /* Section Headline */
+  /* Headline section */
   .headline {
-    padding: 150px 18% 0 18%;
-    /* margin: 20px, 0, 20px, 0; */
+    padding: 150px 18% 0% 18%;
     color: #172b4d;
-    /* width: 100%; */
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -698,122 +687,38 @@
     font-size: 48px;
     line-height: 60px;
     font-weight: 700;
-    /* width: 85%;
-    margin-top: 20px;
-    margin-left: 24px; */
   }
 
   .desc {
-    /* margin-top: 14px;
-    margin-left: 24px; */
     font-size: 20px;
     font-weight: 400;
     color: #344563;
     line-height: 28px;
     padding-bottom: 20px;
-    /* width: 85%; */
-    /* line-height: 1.5;
-    text-align: justify; */
   }
 
   .connect {
     width: 200px;
     margin-bottom: 8px;
-    /* margin-top: 20px; */
-    /* margin-bottom: 10px; */
-    /* margin-left: 24px; */
     color: #7f8cff;
-    font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+    font-weight: 500;
   }
 
   .container-3 {
-    /* margin-left: 24px; */
     display: flex;
     margin-bottom: 200px;
   }
 
-  .linkedin,
-  .m,
-  .github,
-  .angellist {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
-  .m {
-    width: 22px;
-    height: 22px;
-    margin-top: 2px;
-  }
-
-  /* Section Works */
-  .grow { transition: all .2s ease-in-out; }
-  .grow:hover { transform: scale(1.1); }
-
-  .square-shape {
-    display: block;
-    background-color: rgba(0, 0, 0, 0.8);
-    width: 400px;
-    height: 400px;
-    margin-left: 150px;
-  }
-
-  .grow-shape {
-    position: relative;
-    top: 120px;
-    left: 120px;
-    width: 160px;
-    height: 160px;
-    background-color: red;
-    -webkit-transition: -webkit-transform 0.4s;
-    transition: transform 0.4s;
-  }
-
-  .grow-shape:hover {
-    -webkit-transform: scale(1.8) rotate(0.01deg);
-    transform: scale(1.8) rotate(0.01deg);
-  }
-
-  .rotate:hover {
-    animation: rotation 2s infinite linear;
-    /* transform: rotate(720deg); */
-  }
-
-  @keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
-  }
-
-  #delay {
-    font-size: 40px;
-    transition-property: font-size;
-    transition-duration: 1.5s;
-    transition-delay: 1s;
-  }
-  
-  #delay:hover {
-    font-size: 48px;
-  }
-
+  /* Work Section */
   .works {
-    width: 100%;
     margin: 50px 0 50px 0;
+    width: 100%;
   }
 
   .grid-1 {
     display: none;
-    /* width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 640px 700px 640px 700px; */
   }
 
   .grid-1b {
@@ -840,10 +745,6 @@
     background-color: #fff;
     width: 50%;
     padding: 20px auto auto 20px;
-    /* border: solid 1px #dfe1e6;
-    border-radius: 16px;
-    margin-top: 30px;
-    margin-bottom: 30px; */
     display: flex;
     flex-direction: column;
   }
@@ -945,8 +846,6 @@
     border: solid 1px #396df2;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
   }
 
   .see-project:hover {
@@ -960,8 +859,6 @@
     border: solid 1px #fff;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
   }
 
   .see-project:active {
@@ -975,30 +872,50 @@
     border: solid 1px #fff;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
+  }
+
+  .work1-img {
+    display: block;
+    width: 90%;
+    height: auto;
+    margin-top: 15px;
+    margin-left: auto;
     margin-right: auto;
   }
 
   /* Section About Myself */
   .about_myself {
-    margin: 20px, 0, 20px, 0;
+    width: 80%;
+    margin-bottom: 120px;
     color: #172b4d;
     display: flex;
-    flex-direction: column;
+    padding: 0% 10% 0% 10%;
+  }
+
+  .first {
+    width: 40%;
+    padding-right: 15px;
   }
 
   .about {
-    width: 90%;
-    color: #172b4d;
+    width: 100%;
+    color: #091e42;
     font-size: 40px;
     font-weight: 700;
     line-height: 52px;
-    margin-left: 24px;
+  }
+
+  .desc4 {
+    width: 95%;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #344563;
+    margin-bottom: 28px;
   }
 
   .container-4 {
     display: flex;
-    margin: 0 20px 20px 24px;
   }
 
   .my-resume {
@@ -1012,9 +929,6 @@
     border: solid 1px #396df2;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
-    margin-bottom: 15px;
   }
 
   .my-resume:hover {
@@ -1028,50 +942,52 @@
     border: solid 1px #fff;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
   }
 
-  .my-resume:active {
-    font-size: 17px;
-    line-height: 24px;
-    font-weight: 500;
-    text-align: center;
-    vertical-align: middle;
-    background-color: #2230d2;
-    color: #fff;
-    border: solid 1px #fff;
-    padding: 12px;
-    border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
+  .second {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
   }
 
   .languages {
-    display: flex;
-    justify-content: space-between;
-    margin: 30px auto 15px 26px;
-    width: 80%;
+    width: 90%;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .frameworks,
   .skills {
-    display: flex;
-    justify-content: space-between;
-    margin: 15px auto 30px 26px;
-    width: 80%;
+    width: 90%;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
-  .lang1 {
-    width: 85%;
-    margin: 10px auto 10px auto;
+  ul.lang-sub {
     display: flex;
-    flex-direction: column;
+    margin-bottom: 5px;
+    padding-left: 10px;
+  }
+
+  li.li-sp {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .languages,
+  .frameworks,
+  .skills {
+    display: flex;
+    justify-content: space-between;
   }
 
   .row1 {
     width: 100%;
     display: flex;
+    flex-direction: column;
     padding-top: 4px;
     padding-bottom: 3px;
     background-color: #f7f7f9;
@@ -1103,11 +1019,7 @@
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
-    color: #172b4d;
-  }
-
-  .lang-sub {
-    margin-left: 6%;
+    min-width: 350px;
   }
 
   .js,
@@ -1117,43 +1029,66 @@
     color: #253858;
     font-weight: 500;
     line-height: 20px;
-    padding-top: 16px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    width: 70%;
+    width: 100px;
     vertical-align: middle;
+    padding-left: 4px;
   }
 
   .js-img,
   .html5-img,
   .css3-img {
-    width: 17%;
+    width: 40%;
     height: auto;
     padding: 4px;
   }
 
-  /* Contact form section */
-  .footer {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-image: url(/images/blue-background.png);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: auto;
-    background-position: 0% 1.5%;
-    background-size: 100%;
-    margin-bottom: 25px;
+  .resume-text {
+    color: #396df2;
+    font-size: 17px;
+    text-align: center;
+    width: 155px;
+    padding: 10px;
+    border-style: solid;
+    border-radius: 8px;
+    border-width: 2px;
+    border-color: #396df2;
   }
 
-  .heading2 {
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    font-weight: 700;
+  /* Contact form section */
+  #foot {
+    box-sizing: border-box;
+    background: url("/images/bg-contact.png");
+    background-size: cover;
+    background-position: right 100% top 0%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  #contact-form {
+    box-sizing: border-box;
+    width: 50%;
+    margin: 0% auto 0% auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .form1 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #contactf {
+    margin: 115px auto 8px auto;
     font-size: 40px;
+    line-height: 52px;
+    font-weight: 600;
     color: #fff;
     text-align: center;
-    padding-top: 29%;
+    width: 87%;
+    height: 54px;
   }
 
   .paragraph2 {
@@ -1167,6 +1102,43 @@
     text-align: center;
   }
 
+  #desc3 {
+    margin: 10px auto 18px auto;
+    font-weight: 400;
+    font-size: 20px;
+    width: 87%;
+    color: #ebebff;
+    line-height: 28px;
+    text-align: center;
+  }
+
+  #names {
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 20px;
+    color: #172b4d;
+    margin: 15px 38px 15px 16px;
+    width: 90%;
+  }
+
+  #email {
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 20px;
+    color: #172b4d;
+    margin: 15px 38px 15px 16px;
+    width: 90%;
+  }
+
+  #textarea {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #959ba3;
+    margin: 12px 16px 24px 16px;
+    width: 90%;
+  }
+
   .box2 {
     background-color: #fff;
     border: solid 1px #cfd8dc;
@@ -1175,7 +1147,6 @@
     height: 50px;
     color: #172b4d;
     margin: 0 auto 18px auto;
-    vertical-align: middle;
   }
 
   .box3 {
@@ -1188,45 +1159,7 @@
     margin: 0 auto 18px auto;
   }
 
-  #name {
-    font-size: 17px;
-    margin-top: 10px;
-    margin-left: 5px;
-    width: 90%;
-  }
-
-  #name::placeholder {
-    color: #172b4d;
-    padding-left: 16px;
-  }
-
-  #email {
-    vertical-align: middle;
-    color: #172b4b;
-    font-size: 17px;
-    margin-top: 10px;
-    margin-left: 5px;
-    width: 90%;
-  }
-
-  #email::placeholder {
-    color: #172b4b;
-    padding-left: 16px;
-  }
-
-  #message {
-    font-size: 15px;
-    margin-top: 10px;
-    margin-left: 5px;
-    width: 90%;
-  }
-
-  #message::placeholder {
-    color: #b3bac5;
-    padding-left: 16px;
-  }
-
-  .btn {
+  .button3 {
     font-size: 17px;
     line-height: 24px;
     font-weight: 500;
@@ -1238,10 +1171,10 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 10% 6%;
+    margin: 0 auto 45px auto;
   }
 
-  .btn:hover {
+  .button3:hover {
     font-size: 17px;
     line-height: 24px;
     font-weight: 500;
@@ -1253,21 +1186,20 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 10% 6%;
+    margin: 0 auto 45px auto;
   }
 
-  .btn:active {
-    font-size: 17px;
-    line-height: 24px;
-    font-weight: 500;
-    text-align: center;
-    vertical-align: middle;
-    background-color: #2230d2;
-    color: #fff;
-    border: solid 1px #fff;
-    padding: 12px 16px 12px 16px;
-    border-radius: 8px;
-    width: 132px;
-    margin: 0 auto 10% 6%;
+  .grow { transition: all 0.2s ease-in-out; }
+  .grow:hover { transform: scale(1.1); }
+
+  .paragraph2:hover { transform: translate(16px, 0); }
+
+  .rotate { animation: rotation 2s linear; }
+
+  .rotate:hover { animation: rotation 2s linear; }
+
+  @keyframes rotation {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(359deg); }
   }
 }
