--- a/css/styles.css
+++ b/css/styles.css
@@ -944,6 +944,19 @@
     border-radius: 4px;
   }
 
+  .my-resume:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px;
+    border-radius: 4px;
+  }
+
   .second {
     width: 60%;
     display: flex;
@@ -1181,6 +1194,21 @@
     text-align: center;
     vertical-align: middle;
     background-color: #6070ff;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    width: 132px;
+    margin: 0 auto 45px auto;
+  }
+
+  .button3:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
     color: #fff;
     border: solid 1px #fff;
     padding: 12px 16px 12px 16px;
