--- a/css/styles.css
+++ b/css/styles.css
@@ -89,34 +89,10 @@
     font-size: 18px;
   }
 
-  .rotate {
-    animation: rotation 2s  linear;
-  }
-
-  .rotate:hover {
-    animation: rotation 2s linear;
-  }
-
-  @keyframes rotation {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(359deg); }
-  }
-
   .name {
     width: 85%;
     margin-top: 20px;
     margin-left: 24px;
-  }
-
-  #delay {
-    font-size: 40px;
-    transition-property: font-size;
-    transition-duration: 1.5s;
-    transition-delay: 1s;
-  }
-
-  #delay:hover {
-    font-size: 48px;
   }
 
   .desc {
@@ -471,17 +447,10 @@
     background-image: url("../images/blue-background.png");
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  #contact-form {
-    box-sizing: border-box;
-    width: 90%;
-    margin: 0% auto 0% auto;
-    display: flex;
-    flex-direction: column;
+    height: auto;
+    background-position: 0% 1.5%;
+    background-size: 100%;
+    margin-bottom: 25px;
   }
 
   #contactf {
@@ -491,7 +460,7 @@
     font-size: 40px;
     color: #fff;
     text-align: center;
-    padding-top: 33%;
+    padding-top: 29%;
   }
 
   .paragraph2 {
@@ -505,13 +474,25 @@
     text-align: center;
   }
 
-  .paragraph2:hover {
-    transform: translate(16px, 0);
+  .box2 {
+    background-color: #fff;
+    border: solid 1px #cfd8dc;
+    border-radius: 8px;
+    width: 88%;
+    height: 50px;
+    color: #172b4d;
+    margin: 0 auto 18px auto;
+    vertical-align: middle;
   }
 
-  .form1 {
-    display: flex;
-    flex-direction: column;
+  .box3 {
+    background-color: #fff;
+    border: solid 1px #cfd8dc;
+    border-radius: 8px;
+    width: 88%;
+    height: 170px;
+    color: #b3bac5;
+    margin: 0 auto 18px auto;
   }
 
   #names {
@@ -524,26 +505,21 @@
 
   #names::placeholder {
     color: #172b4d;
-    margin: 15px 38px 15px 16px;
-    width: 90%;
+    padding-left: 16px;
   }
 
   #email {
+    vertical-align: middle;
+    color: #172b4b;
     font-size: 17px;
-    font-weight: 500;
-    line-height: 20px;
-    color: #172b4d;
-    margin: 15px 38px 15px 16px;
+    margin-top: 10px;
+    margin-left: 5px;
     width: 90%;
   }
 
-  #textarea {
-    font-size: 17px;
-    font-weight: 400;
-    line-height: 24px;
-    color: #959ba3;
-    margin: 12px 16px 24px 16px;
-    width: 90%;
+  #email::placeholder {
+    color: #172b4b;
+    padding-left: 16px;
   }
 
   #textarea {
@@ -605,18 +581,6 @@
     margin: 0 0 10% 5%;
   }
 
-  #names::placeholder {
-    color: #172b4d;
-  }
-
-  #email::placeholder {
-    color: #172b4b;
-  }
-
-  #message::placeholder {
-    color: #b3bac5;
-  }
-
   #delay {
     font-size: 40px;
     transition-property: font-size;
@@ -626,6 +590,10 @@
 
   #delay:hover {
     font-size: 48px;
+  }
+
+  .paragraph2:hover {
+    transform: translate(16px, 0);
   }
 
   .grow { transition: all 0.2s ease-in-out; }
@@ -1145,7 +1113,7 @@
   /* Contact form section */
   #foot {
     box-sizing: border-box;
-    background: url("/images/bg-contact.png");
+    background: url("../images/bg-contact.png");
     background-size: cover;
     background-position: right 100% top 0%;
     background-repeat: no-repeat;
@@ -1177,16 +1145,6 @@
     text-align: center;
     width: 87%;
     height: 54px;
-  }
-
-  #desc3 {
-    margin: 10px auto 28px auto;
-    font-weight: 400;
-    font-size: 20px;
-    width: 87%;
-    color: #ebebff;
-    line-height: 28px;
-    text-align: center;
   }
 
   #desc3 {
