--- a/css/styles.css
+++ b/css/styles.css
@@ -454,7 +454,6 @@
   }
 
   #contactf {
-    font-family: "Poppins", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -1119,35 +1118,33 @@
     padding: 0;
   }
 
-  #contact-form {
-    box-sizing: border-box;
-    width: 50%;
-    margin: 0% auto 0% auto;
-    display: flex;
-    flex-direction: column;
-  }
-
   .form1 {
     display: flex;
     flex-direction: column;
+    margin-top: 18px;
   }
 
   #contactf {
-    margin: 115px auto 8px auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 100px;
+    width: 53%;
+    height: 54px;
     font-size: 40px;
     line-height: 52px;
     font-weight: 600;
     color: #fff;
     text-align: center;
-    width: 87%;
-    height: 54px;
   }
 
   #desc3 {
-    margin: 10px auto 18px auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    padding-top: 8px;
+    width: 43%;
     font-weight: 400;
     font-size: 20px;
-    width: 87%;
     color: #ebebff;
     line-height: 28px;
     text-align: center;
@@ -1158,8 +1155,9 @@
     font-weight: 500;
     line-height: 20px;
     color: #172b4d;
-    margin: 15px 38px 15px 16px;
-    width: 90%;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 94%;
   }
 
   #email {
@@ -1167,8 +1165,9 @@
     font-weight: 500;
     line-height: 20px;
     color: #172b4d;
-    margin: 15px 38px 15px 16px;
-    width: 90%;
+    margin-top: 13px;
+    margin-left: 10px;
+    width: 94%;
   }
 
   #textarea {
@@ -1176,8 +1175,9 @@
     font-weight: 400;
     line-height: 24px;
     color: #959ba3;
-    margin: 12px 16px 24px 16px;
-    width: 90%;
+    margin-top: 13px;
+    margin-left: 10px;
+    width: 94%;
   }
 
   #names::placeholder {
@@ -1193,20 +1193,20 @@
   }
 
   .box2 {
+    width: 33%;
     background-color: #fff;
     border: solid 1px #cfd8dc;
     border-radius: 8px;
-    width: 88%;
     height: 50px;
     color: #172b4d;
     margin: 0 auto 18px auto;
   }
 
   .box3 {
+    width: 33%;
     background-color: #fff;
     border: solid 1px #cfd8dc;
     border-radius: 8px;
-    width: 88%;
     height: 170px;
     color: #b3bac5;
     margin: 0 auto 18px auto;
@@ -1224,7 +1224,7 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 45px auto;
+    margin: 0 auto 70px auto;
   }
 
   .button3:hover {
@@ -1239,7 +1239,7 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 45px auto;
+    margin: 0 auto 70px auto;
   }
 
   .button3:active {
@@ -1254,7 +1254,7 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 45px auto;
+    margin: 0 auto 70px auto;
   }
 
   .grow { transition: all 0.2s ease-in-out; }
