--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,10 @@
     background-color: rgb(96, 112, 255, 0.8);
     width: 100%;
     height: 810px;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 10;
   }
 
   .toolbar-2 {
@@ -614,18 +618,32 @@
     font-size: 48px;
   }
 
-  .grow { transition: all 0.2s ease-in-out; }
-  .grow:hover { transform: scale(1.1); }
+  .grow {
+    transition: all 0.2s ease-in-out;
+  }
+  .grow:hover {
+    transform: scale(1.1);
+  }
 
-  .paragraph2:hover { transform: translate(16px, 0); }
+  .paragraph2:hover {
+    transform: translate(16px, 0);
+  }
 
-  .rotate { animation: rotation 2s linear; }
+  .rotate {
+    animation: rotation 2s linear;
+  }
 
-  .rotate:hover { animation: rotation 2s linear; }
+  .rotate:hover {
+    animation: rotation 2s linear;
+  }
 
   @keyframes rotation {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(359deg); }
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
   }
 }
 
@@ -1284,17 +1302,31 @@
     margin: 0 auto 70px auto;
   }
 
-  .grow { transition: all 0.2s ease-in-out; }
-  .grow:hover { transform: scale(1.1); }
+  .grow {
+    transition: all 0.2s ease-in-out;
+  }
+  .grow:hover {
+    transform: scale(1.1);
+  }
 
-  .paragraph2:hover { transform: translate(16px, 0); }
+  .paragraph2:hover {
+    transform: translate(16px, 0);
+  }
 
-  .rotate { animation: rotation 2s linear; }
+  .rotate {
+    animation: rotation 2s linear;
+  }
 
-  .rotate:hover { animation: rotation 2s linear; }
+  .rotate:hover {
+    animation: rotation 2s linear;
+  }
 
   @keyframes rotation {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(359deg); }
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
   }
 }
