--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@
   }
 
   .show {
-    position: absolute;
+    position: fixed;
     display: block;
     background-color: rgb(96, 112, 255, 0.8);
     width: 100%;
@@ -94,6 +94,11 @@
     justify-content: right;
     margin-right: 24px;
     padding-top: 12px;
+    padding-bottom: 12px;
+  }
+
+  .overlay-ul {
+    margin-top: 15px;
   }
 
   .overlay-li {
@@ -103,10 +108,10 @@
   .a-li {
     color: #fff;
     font-size: 32px;
-    line-height: 54px;
+    line-height: 56px;
     font-weight: 550;
-    margin-left: 8%;
-    margin-top: 15%;
+    margin-left: 2%;
+    margin-top: 26%;
   }
 
   .cancel1 {
