--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,12 @@
     display: none;
   }
 
+  .grid2 {
+    background-color: #959ba3;
+    width: 100%;
+    height: 500px;
+  }
+
   .work1 {
     background-color: #fff;
     border: solid 1px #dfe1e6;
@@ -330,6 +336,10 @@
     border-radius: 4px;
     margin-left: 5%;
     margin-right: auto;
+  }
+
+  .hidegr {
+    display: none;
   }
 
   /* Section About Myself */
@@ -859,6 +869,12 @@
     grid-template-rows: 1fr 1fr 1fr 1fr;
   }
 
+  .grid2 {
+    background-color: #959ba3;
+    width: 100%;
+    height: 500px;
+  }
+
   .rows {
     width: 80%;
     margin: 20px auto 20px auto;
@@ -1010,6 +1026,10 @@
     margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .hidegr {
+    display: none;
   }
 
   /* Section About Myself */
