--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,24 @@
   padding: 0;
 }
 
+#myModal {
+  display: none;
+}
+
+.modal-content {
+  display: flex;
+  background-color: white;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+  padding: 15px;
+}
+
+.close {
+  font-size: 30px;
+  cursor: pointer;
+}
+
 /* MOBILE SIZE MEDIA QUERY */
 @media only screen and (max-width: 767px) {
   body {
