--- a/css/styles.css
+++ b/css/styles.css
@@ -777,6 +777,17 @@
     display: none;
   }
 
+  .show {
+    position: fixed;
+    display: block;
+    background-color: rgb(96, 112, 255, 0.8);
+    width: 100%;
+    height: 810px;
+    left: 0;
+    top: 0;
+    right: 0;
+  }
+
   .toolbar {
     padding-top: 16px;
     position: fixed;
