--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,10 @@
   }
 
   .hidegr {
+    display: block;
+  }
+
+  .hidegr-2 {
     display: none;
   }
 
@@ -878,6 +882,7 @@
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    display: block;
   }
 
   .grid2 {
