Edit javascript file to arrange images in desktop version.

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@
   }
 
   .hidegr {
-    display: block;
+    display: none;
   }
 
   .hidegr-2 {
@@ -663,6 +663,10 @@
     border-radius: 8px;
     width: 132px;
     margin: 0 0 10% 5%;
+  }
+
+  .hidegr-1 {
+    display: block;
   }
 
   #delay {
@@ -1046,6 +1050,14 @@
 
   .hidegr {
     display: none;
+  }
+
+  .hidegr-2 {
+    display: none;
+  }
+
+  .reverse {
+    flex-direction: row-reverse;
   }
 
   /* Section About Myself */
