--- a/css/styles.css
+++ b/css/styles.css
@@ -1410,6 +1410,38 @@
     margin: 0 auto 70px auto;
   }
 
+  .detail-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    backdrop-filter: blur(2px);
+    background-color: #c1c7d0b3;
+    z-index: 1;
+    display: none;
+  }
+
+  .detail {
+    width: 70%;
+    height: 80%;
+    background-color: white;
+    padding: 30px;
+    overflow: scroll;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .btn-close {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
   .grow {
     transition: all 0.2s ease-in-out;
   }
