--- a/css/styles.css
+++ b/css/styles.css
@@ -1442,6 +1442,10 @@
     cursor: pointer;
   }
 
+  .show-detail {
+    display: block;
+  }
+
   .grow {
     transition: all 0.2s ease-in-out;
   }
