--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@
   .grid-1b-2 {
     display: none;
   }
+
   .grid2 {
     background-color: #959ba3;
     width: 100%;
@@ -243,6 +244,15 @@
   .work-text1 {
     margin-top: 8px;
     font-size: 32px;
+    color: #172b4d;
+    width: 70%;
+    margin-left: 5%;
+    margin-bottom: 10px;
+  }
+
+  .work-text1a {
+    margin-top: 8px;
+    font-size: 28px;
     color: #172b4d;
     width: 70%;
     margin-left: 5%;
@@ -289,6 +299,22 @@
     display: flex;
     align-items: center;
     margin-bottom: 15px;
+  }
+
+  .flex2a {
+    margin-left: 0;
+    margin-right: auto;
+    display: flex;
+    align-items: start;
+    margin-bottom: 15px;
+  }
+
+  a.linkButton {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
+    /* color: initial; */
   }
 
   .float1 {
@@ -341,12 +367,62 @@
     margin-right: auto;
   }
 
+  .see-project2 {
+    font-size: 0.8em;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #fff;
+    color: #396df2;
+    border: solid 1px #396df2;
+    padding: 8px 12px;
+    border-radius: 4px;
+    margin-left: 2%;
+    margin-right: auto;
+  }
+
+  .see-project2:hover {
+    font-size: 0.8em;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #6070ff;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 8px 12px;
+    border-radius: 4px;
+    margin-left: 2%;
+    margin-right: auto;
+  }
+
+  .see-project2:active {
+    font-size: 0.8em;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 8px 12px;
+    border-radius: 4px;
+    margin-left: 2%;
+    margin-right: auto;
+  }
+
+  .photo3 {
+    width: 85%;
+  }
+
   .hidegr {
     display: none;
   }
 
   .hidegr-2 {
     display: none;
+  }
+
+  .hidegr-3 {
+    display: block;
   }
 
   /* Section About Myself */
@@ -668,9 +744,84 @@
     margin: 0 0 10% 5%;
   }
 
-  .hidegr-1 {
+  .detail-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    backdrop-filter: blur(2px);
+    background-color: #c1c7d0b3;
+    z-index: 1;
+    display: none;
+  }
+
+  .detail {
+    width: 70%;
+    height: 80%;
+    background-color: white;
+    padding: 5%;
+    overflow: scroll;
+    position: absolute;
+    border-radius: 16px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .btn-close {
+    position: absolute;
+    right: 60px;
+    top: 60px;
+    background-color: transparent;
+    cursor: pointer;
+    z-index: 999;
+  }
+
+  .show-detail {
     display: block;
   }
+
+  .box {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+  }
+
+  .box-text {
+    width: 70%;
+  }
+
+  .btn-box {
+    margin-left: 15px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    /* gap: 20px; */
+  }
+
+  .img {
+    width: 100%;
+    height: auto;
+    /* object-fit: cover; */
+  }
+
+  .img-inbtn {
+    margin-left: 6px;
+    vertical-align: middle;
+  }
+
+  .para {
+    padding: 4px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #344563;
+  }
+
+  /* .hidegr-1 {
+    display: block;
+  } */
 
   #delay {
     font-size: 40px;
@@ -933,6 +1084,10 @@
     width: 50%;
     height: auto;
     padding: 10px 10px 10px 10px;
+  }
+
+  .photo3 {
+    width: 85%;
   }
 
   .work1b-img {
@@ -1359,6 +1514,32 @@
     height: 170px;
     color: #b3bac5;
     margin: 0 auto 18px auto;
+  }
+
+  .box {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .box-text {
+    width: 70%;
+  }
+
+  .btn-box {
+    display: flex;
+    gap: 20px;
+  }
+
+  .img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+  }
+
+  .para {
+    font-weight: 400;
+    line-height: 30px;
+    color: #344563;
   }
 
   .label {
