--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,35 @@
     margin-bottom: 15px;
   }
 
+  .flex1a {
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+  }
+
+  .canopy2 {
+    color: #344563;
+    font-size: 10px;
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+  }
+
+  .bed2,
+  .year2 {
+    color: #7a869a;
+    font-size: 10px;
+    font-weight: 600;
+  }
+
+  .dot2 {
+    margin: 0;
+    padding: 0;
+    width: 50%;
+    height: auto;
+  }
+
   .flex2a {
     margin-left: 0;
     margin-right: auto;
@@ -314,7 +343,6 @@
     -moz-appearance: button;
     appearance: button;
     text-decoration: none;
-    /* color: initial; */
   }
 
   .float1 {
@@ -785,7 +813,6 @@
   .box {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
   }
 
   .box-text {
@@ -797,13 +824,11 @@
     margin-top: 15px;
     display: flex;
     justify-content: center;
-    /* gap: 20px; */
   }
 
   .img {
     width: 100%;
     height: auto;
-    /* object-fit: cover; */
   }
 
   .img-inbtn {
@@ -1040,7 +1065,14 @@
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    display: block;
+  }
+
+  .grid-1c {
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 60% 40%;
   }
 
   .grid-1b-2 {
@@ -1146,13 +1178,15 @@
   }
 
   .stack {
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 10px;
+    line-height: 14px;
     color: #4c5ace;
     float: left;
     background-color: #ebebff;
-    padding: 4px 12px 4px 12px;
+    padding: 4px 6px 4px 6px;
     border-radius: 6px;
+    min-width: 60px;
+    text-align: center;
   }
 
   .flex1,
@@ -1160,6 +1194,50 @@
     display: flex;
     align-items: center;
     margin-bottom: 32px;
+  }
+
+  .flex1a {
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+  }
+
+  .canopy2 {
+    color: #344563;
+    font-size: 10px;
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+  }
+
+  .bed2,
+  .year2 {
+    color: #7a869a;
+    font-size: 10px;
+    font-weight: 600;
+  }
+
+  .dot2 {
+    margin: 0;
+    padding: 0;
+    width: 50%;
+    height: auto;
+  }
+
+  .flex2a {
+    margin-left: 0;
+    margin-right: auto;
+    display: flex;
+    align-items: start;
+    margin-bottom: 15px;
+  }
+
+  a.linkButton {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+    text-decoration: none;
   }
 
   .see-project {
@@ -1199,6 +1277,57 @@
     border: solid 1px #fff;
     padding: 12px;
     border-radius: 4px;
+  }
+
+  .see-project2 {
+    font-size: 0.8em;
+    font-weight: 500;
+    height: 25px;
+    min-width: 100px;
+    display: flex;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #fff;
+    color: #396df2;
+    border: solid 1px #396df2;
+    padding: 12px 12px;
+    border-radius: 4px;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+
+  .see-project2:hover {
+    font-size: 0.8em;
+    font-weight: 500;
+    height: 25px;
+    min-width: 100px;
+    display: flex;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #6070ff;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px 12px;
+    border-radius: 4px;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+
+  .see-project2:active {
+    font-size: 0.8em;
+    font-weight: 500;
+    height: 25px;
+    min-width: 100px;
+    display: flex;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px 12px;
+    border-radius: 4px;
+    margin-left: 15%;
+    margin-right: 15%;
   }
 
   .work1-img {
@@ -1517,8 +1646,10 @@
   }
 
   .box {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    font-size: 14px;
   }
 
   .box-text {
@@ -1527,19 +1658,34 @@
 
   .btn-box {
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
+    margin-left: 15px;
+    margin-top: 15px;
+  }
+
+  .box4 {
+    width: 32%;
+    display: flex;
+    flex-direction: column;
   }
 
   .img {
     width: 100%;
     height: 500px;
     object-fit: cover;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
 
   .para {
     font-weight: 400;
     line-height: 30px;
     color: #344563;
+  }
+
+  .img-inbtn {
+    margin-left: 10px;
+    vertical-align: middle;
   }
 
   .label {
@@ -1610,6 +1756,7 @@
     padding: 30px;
     overflow: scroll;
     position: absolute;
+    border-radius: 10px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -1617,10 +1764,11 @@
 
   .btn-close {
     position: absolute;
-    right: 30px;
-    top: 30px;
+    right: 240px;
+    top: 70px;
     background-color: transparent;
     cursor: pointer;
+    z-index: 999;
   }
 
   .show-detail {
